- Issue resolved for the Create Plan vendor category select issue.
- Manage the PDF download for all tab.
- Manage the Executive Summary design for following page
    - Evidence Report
    - Evidence dpm report
- Issue resolved for the Create Plan vendor category select issue.

--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -66,8 +66,8 @@
                                     <div class="form-group">
                                         <label class="form_label">Vendor Category <span
                                                 class="start_css">*</span></label>
-                                        <ng-select (change)="getVendor($event)" [items]="categoryObj"
-                                            bindLabel="categoryName" bindValue="id" formControlName="vendorCategory"
+                                        <ng-select [items]="categoryObj"
+                                            bindLabel="categoryName" bindValue="id" formControlName="vendorCategoryId"
                                             class="form-control inputbox_css ">
                                         </ng-select>
                                     </div>
