--- a/src/app/dashboard/evidence/dpm-report/dpm-report.component.html
+++ b/src/app/dashboard/evidence/dpm-report/dpm-report.component.html
@@ -11,10 +11,10 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success" (click)="exportAsPDF('checkSheet');">Download PDF</button>
               </div>
             </div>
-            <div class="card-body">
+            <div class="card-body" id="checkSheet">
               <div class="table-responsive max_hei_table">
                 <table class="table table-bordered">
                   <thead class="bac_table_white">
@@ -96,10 +96,218 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success" (click)="exportAsPDF('MyDIv');">Download PDF</button>
               </div>
             </div>
-            <div class="card-body">
+            <div class="card-body" id="MyDIv">
+              <div class="row mb-2">
+                <div class="col-md-3">
+                  <img src="../../../../assets/img/report-logo.png">
+                </div>
+                <div class="col-md-9 fon_20 font-weight-bold text-center">MARUTI SUZUKI INDIA LIMITED</div>
+              </div>
+              <div class="table-responsive">
+                <table class="table table-bordered">
+                  <thead class="bac_table_white">
+                    <tr class="text-center bac_table_white">
+                      <th rowspan="2" colspan="4" class="ver_midd"> Vendor Quality System Audit Report</th>
+                      <th>Issue Deptt</th>
+                      <td>QA-VSA</td>
+                      <th>Prepared</th>
+                      <th>Verified</th>
+                      <th>Approved</th>
+                    </tr>
+                    <tr class="text-center bac_table_white">
+                      <th colspan="2">Date of Issue
+                        <!-- <td>{{auditReportData?.dateOfIssue | date:dateFormat}}</td> -->
+                      <td rowspan="2">{{auditReportData?.preparedBy}}</td>
+                      <td rowspan="2">{{auditReportData?.verifiedBy}}</td>
+                      <td rowspan="2">{{auditReportData?.approvedBy}}</td>
+                    </tr>
+                    <tr class="text-center">
+                      <th colspan="2">Copy to</th>
+                      <th colspan="2">Supplier name</th>
+                      <td colspan="2">{{auditReportData?.dateOfIssue | date:dateFormat}}</td>
+                      <!-- <th>Supplier Attendant Name</th>
+                        <th colspan="2">Audit Date</th> -->
+                    </tr>
+                    <tr class="text-center">
+                      <td>Vendor</td>
+                      <td></td>
+                      <td rowspan="2" colspan="2" class="ver_midd">Dummy Industries</td>
+                      <th colspan="3">Supplier Attendant Name</th>
+                      <th colspan="2">Audit Date</th>
+                      <!-- <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td> -->
+                    </tr>
+                    <tr class="text-center">
+                      <td>QAPQ</td>
+                      <td></td>
+                      <td colspan="3" rowspan="7" class="ver_midd">
+                        <!-- Mr. X - Director <br />
+                        Mr. Y - Plant Head -->
+                      </td>
+                      <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td>
+                      <!-- <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td> -->
+                    </tr>
+                    <tr class="text-center">
+                      <td>SC</td>
+                      <td></td>
+                      <th>Supplier code</th>
+                      <td></td>
+                      <th colspan="2">Audit Person</th>
+                    </tr>
+                    <tr class="text-center">
+                      <td></td>
+                      <td></td>
+                      <th colspan="2">(Audit Score)</th>
+                      <td colspan="2" rowspan="5">{{auditReportData?.auditPerson}}</td>
+                    </tr>
+                    <tr class="text-center">
+                      <td></td>
+                      <td></td>
+                      <td class="border-right-0">Achieved Score:{{categoryScoreSum}}</td>
+                      <td class="text-left border-left-0" rowspan="2"> X 100 = <b>{{totalCountPercentage | number : '1.2-2'}}</b></td>
+                    </tr>
+                    <tr class="text-center">
+                      <td></td>
+                      <td></td>
+                      <td class="border-right-0">Total Score:{{totalCountSum}}</td>
+                    </tr>
+                    <tr class="text-center">
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr class="text-center">
+                      <td>Total</td>
+                      <td></td>
+                    </tr>
+                  </thead>
+                  <!-- <tbody class="text-center"> -->
+                  <!-- <tr>
+                        <td>Vendor</td>
+                        <td>1</td>
+                        <td rowspan="2" class="ver_midd">Dummy Industries</td>
+                        <td>Mr. X - Director</td>
+                        <td colspan="2">{{auditReportData?.auditDate | date:dateFormat}}</td>
+                      </tr>
+                      <tr>
+                        <td>QAPQ</td>
+                        <td>1</td>
+                        <td rowspan="2">Mr. Y - Plant Head</td>  
+                        <th colspan="2">Audit Person</th>
+                      </tr>
+                      <tr>
+                        <td>SC</td>
+                        <td>1</td>
+                        <th>Supplier code:DD01</th>
+                        <td colspan="2">{{auditReportData?.auditPerson}}</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td></td>
+                        <th>(Audit Score)</th>
+                      </tr>
+                      <tr>
+                        <td>Total</td>
+                        <td>3</td>
+                        <td>62</td>
+                      </tr> -->
+                  <!-- </tbody> -->
+                  <!-- <tbody class="text-center">
+                    </tbody> -->
+                </table>
+              </div>
+              <div class="table-responsive">
+                <table class="table table-borderd">
+                  <thead>
+                    <tr class="now_rap text-center sticky_header">
+                      <th rowspan="2" class="ver_midd"><b>Subject:</b> Vendor System Audit</th>
+                      <th>Part Number：</th>
+                      <td>{{auditReportData?.partNumber}}</td>
+                    </tr>
+                    <tr class="text-center">
+                      <th>Part Name:</th>
+                      <td>{{auditReportData?.partNumber}}</td>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+  
+              <p class="mb-1 mt-2"><b>Supplier category is "{{supplierCategoryStatus}}". Major improvement areas are as
+                  follows:-</b></p>
+              <!-- <p>
+                  1- New product development planning needs improvement.  All relevant activities to be included in preparation of APQP plan.<br>
+                  2- Review of APQP plan to be adequately recorded and Process FMEAs to be made in accordance with the defined standards.<br>
+                  3- Initial flow control process implementation to be improved. Extension criteria of the activity to be clearly defined..<br>
+                  4- 4M change management to be defined and implemented effectively on shop floor with proper recording and quality checks of parts..<br>
+                  5- Tier - 2 supplier controls needs strengthening. Supplier rating and auditing system to be standardized..<br>
+                  6- Skill Evaluation criteria to be defined for operators and adherence to be strengthened. Monitoring of annual training plan to be improved..<br>
+                  7- Quality abnormality handling process needs effective implementation with focus on root cause analysis and standardization of countermeasure actions..<br>
+                  8- Implementation of updated standards on shop floor and actual working as per defined PCS / WI to be ensured..<br>
+                  9- Adherence of material storage system (FIFO etc.) at BOP area to be improved. Visual identification of material to be strengthened..<br>
+                  10- Implementation of defined work instructions and adherence to set standards to be strengthened..<br>
+                </p> -->
+              <p class="mb-0" *ngFor="let item of criticalObservations;let i =index">
+                {{i+1}}- {{item.criticalObservation}}
+              </p>
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="table-responsive">
+                    <table id="example2" class="table table-bordered table-hover">
+  
+                      <thead>
+                        <tr class="now_rap text-center sticky_header">
+                          <th>Category</th>
+                          <th>Achieved/Total</th>
+                          <th class="w_17" rowspan="2">○</th>
+                          <th class="w_17" rowspan="2">△</th>
+                          <th class="w_17" rowspan="2">X</th>
+                        </tr>
+                        <tr class="now_rap text-center sticky_header">
+  
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="tbody_data"
+                          *ngFor="let item of auditReportData?.catergoryWiseScoreModel;let i = index">
+                          <td>{{i+1}}-{{item.name}}</td>
+                          <td>{{item.categoryScore}}/{{item.totalCount}}</td>
+                          <td>{{item.pieScore}}</td>
+                          <td>{{item.triangleScore}}</td>
+                          <td>{{item.xScore}}</td>
+                        </tr>
+                        <tr class="tbody_data">
+                          <td>Total</td>
+                          <td>{{categoryScoreSum}}/{{totalCountSum}}</td>
+                          <td>{{pieScoreSum}}</td>
+                          <td>{{triangleScoreSum}}</td>
+                          <td>{{xScoreSum}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="col-md-7" *ngIf="this.chartsData">
+                  <canvas baseChart [data]="reportData" [type]="'radar'" [options]="reportOptions">
+                  </canvas>
+                </div>
+              </div>
+              <div class="row">
+                <table id="example2" class="table table-bordered table-hover">
+                  <thead>
+                    <tr class="now_rap text-center sticky_header">
+                      <th>Pre decided negative marking (if any)</th>
+                      <th class="w_204"></th>
+                      <th>Improvement Submission Date</th>
+                      <th class="w_204"></th>
+                      <th>Last Audit Rating</th>
+                      <th class="w_204"></th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+            </div>
+            <!-- <div class="card-body">
               <div class="table-responsive max_hei_table">
                 <table class="table table-bordered">
                   <thead class="bac_table_white">
@@ -220,7 +428,7 @@
                     </canvas>
                 </div>
             </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordionExample">
@@ -228,10 +436,10 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success"  (click)="exportAsPDF('recivingData');">Download PDF</button>
               </div>
             </div>
-            <div class="card-body">
+            <div class="card-body" id="recivingData">
               <div class="row">
                 <div class="col-sm-6">
                   <div class="table-responsive max_hei_table">
