--- a/src/app/dashboard/evidence/add-section-head-remarks/add-section-head-remarks.component.html
+++ b/src/app/dashboard/evidence/add-section-head-remarks/add-section-head-remarks.component.html
@@ -48,7 +48,10 @@
                           </div>
                     </div>
                     <div class="card-footer">
-
+                      <button class="btn btn-success mr-1"
+                       (click)="giveStatus(accept)">Accept</button>
+                    
+                        <button class="btn btn-danger mr-1" (click)="giveStatus(reject)"  >Reject</button>
                         <button (click)="back()" class="btn btn-default">Back</button>
                     </div>
                 </div>
