--- a/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
+++ b/src/app/dashboard/evidence/section-head-data/section-head-data.component.html
@@ -23,8 +23,8 @@
                                         <th>View Report</th>
                                         <th>No Of Observation</th>
                                         <th>Action</th>
-                                        <th>Accept</th>
-                                        <th>Reject</th>
+                              <!--           <th>Accept</th>
+                                        <th>Reject</th> -->
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -37,7 +37,7 @@
                                         <td><a (click)="goToReport(item.id)"><img src="../../../../assets/img/pie-chart.png" class="w_30"></a></td>
                                         <td>{{item.observationCount}}</td>
                                         <td> <a (click)="addRemark(item)"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a></td>
-                                        <td><div *ngIf="item.sectionHeadApprovalStatus !='Approved' && item.sectionHeadApprovalStatus !='Rejected'">
+                                    <!--     <td><div *ngIf="item.sectionHeadApprovalStatus !='Approved' && item.sectionHeadApprovalStatus !='Rejected'">
                                             <button class="btn btn-success" (click)="submit(accept,
                                             item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Accept</button>
                                         </div>
@@ -46,7 +46,7 @@
                                             <div *ngIf="item.sectionHeadApprovalStatus !='Approved' &&item.sectionHeadApprovalStatus !='Rejected'" >
                                             <button class="btn btn-danger" data-toggle="tooltip" (click)="openModal(reject,item)" data-placement="top" title="Tooltip on top">Reject</button>
                                         </div>
-                                        </td>
+                                        </td> -->
                                     </tr>
                                 </tbody>
                             </table>
