--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -17,7 +17,7 @@
                       <tr class="">
                         <th>S.No</th>
                         <th>Category</th>
-                        <th>Completion Status</th>
+                        <th class="w_226">Completion Status</th>
                         <th class="w_226">Score</th>
                        
                       </tr>
