--- a/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
+++ b/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
@@ -28,8 +28,8 @@
                 <tbody>
                     <tr class="tbody_data" *ngFor="let item of actionPlanList ;let i =index">
                         <td>{{i+1}}</td>  
-                        <td><p class="show">{{item.auditArea}}</p></td>  
-                        <td><p class="show">{{item.regulationText}}</p></td>
+                        <td><p class="show1">{{item.auditArea}}</p></td>  
+                        <td><p class="show1">{{item.regulationText}}</p></td>
                         <td>{{item.remark}}</td>
                         <td>{{item.detailOfImprovement}}</td>
                         <td>{{item.incharge}}</td>
