--- a/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
@@ -28,7 +28,7 @@
                     <th>Concerning regulation</th>
                     <th>Judgment</th>
                     <th>Remarks</th>
-                    <th>View Image</th>
+                    <th>Follow Up</th>
                   </tr>
                 </thead>
                 <tbody class="text-center">
@@ -217,18 +217,18 @@
             <p class="mb-0" *ngFor="let item of criticalObservations;let i =index">
               {{i+1}}- {{item.criticalObservation}}
             </p>
-            <div class="row">
-              <div class="col-md-5">
+            <div class="row mt-3">
+              <div class="col-md-4">
                 <div class="table-responsive">
                   <table id="example2" class="table table-bordered table-hover">
 
                     <thead>
-                      <tr class="now_rap text-center sticky_header">
-                        <th>Category</th>
+                      <tr class="now_rap  sticky_header">
+                        <th >Category</th>
                         <th>Achieved/Total</th>
-                        <th class="w_17" rowspan="2">○</th>
-                        <th class="w_17" rowspan="2">△</th>
-                        <th class="w_17" rowspan="2">X</th>
+                        <th rowspan="2">○</th>
+                        <th rowspan="2">△</th>
+                        <th rowspan="2">X</th>
                       </tr>
                       <tr class="now_rap text-center sticky_header">
 
@@ -237,24 +237,24 @@
                     <tbody>
                       <tr class="tbody_data"
                         *ngFor="let item of auditReportData?.catergoryWiseScoreModel;let i = index">
-                        <td>{{i+1}}-{{item.name}}</td>
-                        <td>{{item.categoryScore}}/{{item.totalCount}}</td>
-                        <td>{{item.pieScore}}</td>
-                        <td>{{item.triangleScore}}</td>
-                        <td>{{item.xScore}}</td>
+                        <td class="w_17">{{i+1}}</td>
+                        <td class="w_27">{{item.categoryScore}}/{{item.totalCount}}</td>
+                        <td class="w_27">{{item.pieScore}}</td>
+                        <td class="w_27">{{item.triangleScore}}</td>
+                        <td class="w_27">{{item.xScore}}</td>
                       </tr>
                       <tr class="tbody_data">
-                        <td>Total</td>
-                        <td>{{categoryScoreSum}}/{{totalCountSum}}</td>
-                        <td>{{pieScoreSum}}</td>
-                        <td>{{triangleScoreSum}}</td>
-                        <td>{{xScoreSum}}</td>
+                        <td class="w_17">Total</td>
+                        <td class="w_27">{{categoryScoreSum}}/{{totalCountSum}}</td>
+                        <td class="w_27">{{pieScoreSum}}</td>
+                        <td class="w_27">{{triangleScoreSum}}</td>
+                        <td class="w_27">{{xScoreSum}}</td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
               </div>
-              <div class="col-md-7" *ngIf="this.chartsData">
+              <div class="col-md-8" *ngIf="this.chartsData">
                 <canvas baseChart [data]="reportData" [type]="'radar'" [options]="reportOptions">
                 </canvas>
               </div>
