Manage audit question page changes

--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -91,6 +91,9 @@
                                            
                                 
                                           </div>
+                                          <div class="max-w-100" *ngIf="fileUploadArray && fileUploadArray[i] && fileUploadArray[i][j]">
+                                            {{fileUploadArray[i][j].name}}
+                                          </div>
                                          
                                         </td>
                                       </tr>
