- Manage audit view page all fields are disabled for admin and auditor both case.
    - Manage audit view page all fields are disabled for admin and auditor both case.
    - Assign auditor duplicate selection validation added.
    - Null value removed from assign auditor API call to save the data.

--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -29,7 +29,7 @@
                         </select> -->
                         <ng-select [items]="auditorList[i]" bindLabel="code" bindValue="id"
                           formControlName="auditorId" class="form-control"
-                          (search)="searchAuditor($event.term, i)">
+                          (search)="searchAuditor($event.term, i)" (change)="audotorChange($event, i)">
                         </ng-select>
                       </td>
                       <td class="btn-width p-1">
