--- a/src/app/dashboard/audit-plan/view-plan/audit-log/audit-log.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/audit-log/audit-log.component.html
@@ -7,7 +7,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="max_hei_table-350">
+        <div class="table-responsive max_hei_table-350">
         <table class="table table-bordered">
           <thead>
             <tr class="sticky_header">
