--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="card-body">
             <form [formGroup]="assignAuditorForm">
-              <div class="table-responsive max_hei_table">
+              <div class="table-responsive max_hei_table" style="">
                 <table class="table table-bordered" formArrayName="assignAuditor">
                   <thead class="sticky_header">
                     <tr>
