--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -75,7 +75,7 @@
           <div class="flex_direction_media ">
             <div class="d-flex align-items-center d-flex justify-content-between">
               <div></div>
-            <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit As Final</button>
+            <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit</button>
             <button (click)="back()" class="btn btn-default">Back</button>
             </div>
           </div>
