--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -1,7 +1,7 @@
 <section class="content pt-2">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12">
+      <div class="col-sm-12">
         <div class="card card-default">
           <div class="card-header">
             <div class="d-flex align-items-center d-flex justify-content-between">
@@ -34,9 +34,12 @@
                               <h4 class="fon_14"><b>{{i+1}}.</b>
                                 {{regulationList[i]?.name}}
                             </h4>
+                            <div class="d-flex">
                             <button class="btn btn-orange mr-1 mange-que-detail-button" (click)="openSectionModal(regulationList[i])" >Section Head Remarks</button>
                             <button class="btn btn-primary mange-que-detail-button"  (click)="openLastModal(regulationList[i])" > Last Year Remarks</button>
-                           </div>
+                           
+                          </div>
+                        </div>
                           </div>
                           <div class="card-body">
                             <div class="row" [formGroupName]="i">
