download evidence change

--- a/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
+++ b/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
@@ -44,7 +44,7 @@
                                     <tr class="sticky_header">
                                         <th>S.No</th>
                                         <th>Categories </th>
-                                        <th>Observation</th>
+                                        <th>Action Plan</th>
                                         <th>Evidence Received</th>
                                        <th>Action To Be Taken</th>
                                        <!--   <th>Closed</th>
