--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -2,17 +2,6 @@
     <div class="card-header">
         <div class="header_card">
             <h3 class="card-title">{{categoryName}}</h3>
-<!--             <div class="form-group mb-0 w_26">
-                <select class="form-control filter_css">
-                    <option>Select Vendor Name</option>
-                    <option>Vendor1</option>
-                    <option>Vendor1</option>
-                    <option>Vendor1</option>
-                    <option>Vendor1</option> 
-                    <option>Vendor1</option> 
-                    <option>Vendor1</option>
-                </select>
-            </div> -->
         </div>
     </div>
     <div class="card-body">
@@ -43,7 +32,9 @@
                         <td>{{item.detailOfImprovement}}</td>
                         <td>{{item.incharge}}</td>
                         <td>{{item.dateOfSubmission | date:dateFormat}}</td>
-                        <td></td>
+                        <td>
+                            <a *ngIf="item.attachment" (click)="download(item.attachment)"><img src="../../../../assets/img/pie-chart.png" class="w_30"></a>
+                        </td>
                         <td><button class="btn btn-success mr-1" 
               
                             (click)="observeAction(1,item.id)">Open</button>
