--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -91,7 +91,7 @@
             <div class="table-responsive max_hei_table">
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
-                  <tr class="now_rap text-center sticky_header">
+                  <tr class="now_rap sticky_header">
                     <th>Audit No</th>
                     <th>Vendor Code </th>
                     <th>Vendor Name</th>
